# picasso

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  python-tests.yml
docs/: conf.py  index.rst
docs/api/: nonthermal.rst  polytrop.rst  predictors.rst  utils.rst
docs/data/: halos.hdf5
docs/model/: model.rst  trained_models.rst
docs/notebooks/: demo_model.ipynb  make_predictions.ipynb  plot_model_params.ipynb  train_model.ipynb
notebooks/: plot_model_params.ipynb  polytrop_optimize_both_parametrizations.ipynb  polytrop_reparam.ipynb
picasso/: __init__.py  cic.py  cic_old.py  nonthermal.py  polytrop.py  polytrop_ostriker.py  predictors.py  test_data.py  utils.py
picasso/data_helpers/: __init__.py  data_576.py  fitters.py  hacc.py  match_halo_catalogs.py
picasso/trained_models/: baseline.pkl  minimal.pkl  subgrid.pkl
picasso/trained_models/576/: adiabatic_Gamma_r.pkl  baseline.pkl  compact.pkl  minimal.pkl  nonradiative_Gamma_r.pkl  subgrid.pkl  subgrid_Gamma_r.pkl
picasso/trained_networks/: net1.pkl  net12.pkl
picasso/utils/: __init__.py  azimuthal_profile.py  data_preparation.py  fitting.py  nfw.py  plots.py  sph.py
tests/: test_cic.py  test_cic_gauss.ipynb  test_cic_nfw.ipynb  test_hacc_helper.py  test_match_halo_catalogs.py  test_optimize.py  test_predictors.py  test_sph.py
tests/data/: cutout_data.hdf5  data_1halo_498_1pct.hdf5  data_1halo_624_1pct.hdf5  halos.hdf5  test_data_predictor.pkl  untrained_predictor.pkl
