[tool.poetry]
name = "picasso"
version = "0.3.0"
description = ""
authors = ["Florian Keruzore <florian.keruzore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.2"
h5py = "^3.9.0"
astropy = "^5.3.3"

[tool.poetry.group.jax]

[tool.poetry.group.jax.dependencies]
flax = "^0.8.1"
jax = "^0.4.20"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"
pytest-benchmark = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--benchmark-disable -ra -q --benchmark-group-by=func"
testpaths = [
    "tests",
]