[tool.poetry]
name = "picasso"
version = "0.5.0"
description = ""
authors = ["Florian Keruzore <florian.keruzore@gmail.com>"]
license = "MIT"
homepage = "https://github.com/fkeruzore/picasso"
repository = "https://github.com/fkeruzore/picasso"
documentation = "https://picasso-cosmo.readthedocs.io/en/latest/"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.25.2"
scipy = "<=1.12.0,>= 1.6.0"
h5py = "^3.9.0"
astropy = "^5.3.3"
dill = "^0.3.8"

jax = {version = "^0.4.20", optional = true}
flax = {version = "^0.8.1", optional = true}

[tool.poetry.extras]
jax = ["jax", "flax"]

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"
pytest-benchmark = "^4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
black = "^24.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pydata-sphinx-theme = "^0.15.4"
sphinx-autodoc-typehints = "^2.2.3"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.0"
sphinx-remove-toctrees = "^1.0.0.post1"
sphinxcontrib-applehelp = "^1.0.8"
sphinxcontrib-devhelp = "^1.0.6"
sphinxcontrib-htmlhelp = "^2.0.6"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^1.0.8"
sphinxcontrib-serializinghtml = "^1.1.10"
matplotlib = "^3.9.2"
myst-nb = "^1.1.1"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--benchmark-disable -ra -q --benchmark-group-by=func"
testpaths = [
    "tests",
]
